Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <p>Each microservice can be deployed independently, the instructions of each microservice is in its own repository.</p>
 
-<p><strong>Live Demo</strong>: </p>
+<p><a href="maelstrom-mmo.herokuapp.com"><strong>Live Demo</strong></a></p>
 
 <blockquote>
 <p>This demo is still a beta under heavy development</p>
