--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
 <p>Each microservice can be deployed independently, the instructions of each microservice is in its own repository.</p>
 
-<p><a href="maelstrom-mmo.herokuapp.com"><strong>Live Demo</strong></a></p>
+<p><a href="http://demiurgosoft.github.io/maelstrom/presentation#1">Online Presentation (Spanish)</a></p>
+
+<p><a href="maelstrom-mmo.herokuapp.com">Live Demo</a></p>
 
 <blockquote>
 <p>This demo is still a beta under heavy development</p>
