--- a/memoria/slides/index.html
+++ b/memoria/slides/index.html
@@ -49,6 +49,8 @@ background-image: url(images/maelstrom-bg.png)
 
 ???
 
+* Pocos MMO
+
 * Multiplayer: 2~64 jugadores
 
 * MMO: >100
@@ -57,8 +59,6 @@ background-image: url(images/maelstrom-bg.png)
 count: false
 
 * **Multiplayer vs MMO**
-
-
 
 ---
 
@@ -74,6 +74,8 @@ Prototipo Open-Source de un videojuego **Multijugador Masivo Online** de estrate
 </center>
 
 ???
+
+**Objetivos**   
 
 * Analizar los MMO
 
@@ -98,8 +100,6 @@ Prototipo Open-Source de un videojuego **Multijugador Masivo Online** de estrate
 
 ???
 
-**<5 min mark**
-
 multiplayer=/=mmo
 
 
@@ -113,6 +113,8 @@ multiplayer=/=mmo
 </center>
 
 ???
+**5 MIN**
+
 * Qué son los microservicios   
 * Ventajas:
     * Tecnologia especifica
@@ -129,6 +131,7 @@ multiplayer=/=mmo
 </center>
 
 ???
+
 Buscar mínima latencia
 
 Orientacion a servicios (SOA)
@@ -313,6 +316,7 @@ class: center, middle
 ---
 ## Conclusión y trabajos futuros
 
+Prototipo MMO:
 
 * Diseño arquitectónico modular basado en servicios.
 
@@ -320,14 +324,15 @@ class: center, middle
 
 * Sistema distribuido
 
-* Almacenamiento de datos NoSQL (MongoDB)
 
 
 ???
 
-* **Conocimientos Adquiridos**
+* Conocimientos Adquiridos
 
-* **Asignaturas Relevantes**
+* Asignaturas Relevantes
+
+* Almacenamiento de datos NoSQL (MongoDB)
 
 ---
 
@@ -344,11 +349,30 @@ class: center, middle
 ???
 Comentar dificultades en escalabilidad
 
+**Comercialización:**
+
+* tipos de modelo de negocio (desarrollo juegos, venta del framework (pequeñas y grandes empresas), proporcionar servicio)
+* Riesgo Alto: Gran coste, necesaria inversion inicial de una empresa
+* MVP: Este prototipo
+
 ---
 layout:false
 class: center, middle
 
 <img src="images/maelstrom_logo.png" width="40%">
+
+???
+Patrones:
+
+* Observer (cliente y servidor)
+* Facade (servicios)
+
+* Prototype (Creacion de barcos)
+* Singleton (elemento world)
+
+-----
+
+**Node vs Python | PHP**
 
 
 
