--- a/memoria/slides/index.html
+++ b/memoria/slides/index.html
@@ -85,6 +85,9 @@ Prototipo Open-Source de un videojuego **Multijugador Masivo Online** de estrate
 
 * Proponer un framework
 
+
+Desarrollado con Node.js
+
 ---
 
 ## Problemas
