--- a/memoria/slides/index.html
+++ b/memoria/slides/index.html
@@ -490,6 +490,52 @@ _Wikipedia_
 * Usado como sinónimo de _Remolino Gigante_
 
 
+---
+count: false
+
+## Model Canvas
+
+* **Socios clave**
+  * Proveedores de servidores
+  * Desarrolladores de _Game Engines_
+* **Actividades clave**
+  * Actualizar Framework
+  * Proporcionar asistencia técnica
+* **Recursos clave**
+  * Desarrolladores
+  * Servidores
+* **Coste**
+  * Servidores
+  * Desarrolladores
+  * Promoción
+* **Propuesta de valor**
+  * Desarrollo fácil y barato de MMO
+  * Compatible con los estándares
+  * Servicio escalable y extensible
+
+
+---
+count:false
+
+## Model Canvas
+
+* **Relaciones con cliente**
+  * Asistencia
+  * Feedback
+  * _Banner_ en los productos
+* **Canales**
+  * Online
+  * Demo
+* **Segmento de cliente**
+  * Desarrolladores _Indie_
+  * Desarrolladores de juegos AAA
+* **Fuente de ingresos**
+  * Mantenimiento
+  * Suscripción
+  * Desarrollo de videojuegos
+
+
+
 
     </textarea>
     <script src="./remark-latest.min.js">
